Working on running temporary tests for converting java objects to byteBuffers.